--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "course-directory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://hamelsmu.github.com/react-deploy-test",
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "gh-pages": "^2.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
